chore: update ebean transactional annotation usages (#111)
this is done in order to make small transactions where it's possible