@@ -38,7 +38,6 @@ import java.time.OffsetDateTime;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Singleton
 public class MembersServiceImpl implements MembersService {
@@ -107,14 +106,13 @@ public class MembersServiceImpl implements MembersService {
     subscription.owner(isOwner);
     subscriptionRepository.update(subscription);
     eventDispatcher.sendToUserExchange(
-        room.getSubscriptions().stream().map(Subscription::getUserId).collect(Collectors.toList()),
+        room.getSubscriptions().stream().map(Subscription::getUserId).toList(),
         isOwner
             ? RoomOwnerPromoted.create().roomId(roomId).userId(userId)
             : RoomOwnerDemoted.create().roomId(roomId).userId(userId));
   }
 
   @Override
-  @Transactional
   public MemberInsertedDto insertRoomMember(
       UUID roomId, MemberToInsertDto memberToInsertDto, UserPrincipal currentUser) {
     if (!userService.userExists(memberToInsertDto.getUserId(), currentUser)) {
@@ -160,7 +158,7 @@ public class MembersServiceImpl implements MembersService {
         room.getId(), currentUser.getId(), memberToInsertDto.getUserId().toString());
 
     eventDispatcher.sendToUserExchange(
-        room.getSubscriptions().stream().map(Subscription::getUserId).collect(Collectors.toList()),
+        room.getSubscriptions().stream().map(Subscription::getUserId).toList(),
         RoomMemberAdded.create()
             .roomId(UUID.fromString(room.getId()))
             .userId(memberToInsertDto.getUserId())
@@ -192,7 +190,7 @@ public class MembersServiceImpl implements MembersService {
         room.getSubscriptions().stream()
             .filter(Subscription::isOwner)
             .map(Subscription::getUserId)
-            .collect(Collectors.toList());
+            .toList();
     if (owners.size() == 1
         && owners.get(0).equals(userId.toString())
         && room.getSubscriptions().size() > 1) {
@@ -206,7 +204,7 @@ public class MembersServiceImpl implements MembersService {
         room.getSubscriptions().stream().filter(Subscription::isOwner).toList().get(0).getUserId(),
         userId.toString());
     eventDispatcher.sendToUserExchange(
-        room.getSubscriptions().stream().map(Subscription::getUserId).collect(Collectors.toList()),
+        room.getSubscriptions().stream().map(Subscription::getUserId).toList(),
         RoomMemberRemoved.create().roomId(UUID.fromString(room.getId())).userId(userId));
     // the room isn't updated with subscriptions table. It still has the deleted subscription,
     // so if room has only one subscription, but actually it is empty
@@ -238,6 +236,6 @@ public class MembersServiceImpl implements MembersService {
                     .temporary(false)
                     .external(false)
                     .joinedAt(OffsetDateTime.now()))
-        .collect(Collectors.toList());
+        .toList();
   }
 }
